--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -54,6 +54,11 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="MoveRight",Scale=-1.000000,Key=A)
 +AxisMappings=(AxisName="MoveFoward",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="MoveRight",Scale=1.000000,Key=D)
++AxisMappings=(AxisName="Movement Tick Test",Scale=1.000000,Key=W)
++AxisMappings=(AxisName="NewAxisMapping_1",Scale=1.000000,Key=None)
++AxisMappings=(AxisName="Movement Tick Test",Scale=1.000000,Key=A)
++AxisMappings=(AxisName="Movement Tick Test",Scale=1.000000,Key=S)
++AxisMappings=(AxisName="Movement Tick Test",Scale=1.000000,Key=D)
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
 ConsoleKey=None
 -ConsoleKeys=Tilde
