--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -13,6 +13,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 EditorStartupMap=/Game/Maps/mainmenu.mainmenu
 GlobalDefaultGameMode=/Game/BluePrints/GameMode/GameModeJam.GameModeJam_C
 GameDefaultMap=/Game/Maps/mainmenu.mainmenu
+GameInstanceClass=/Game/BluePrints/Jam_GameInstance.Jam_GameInstance_C
 
 [/Script/Engine.CollisionProfile]
 -Profiles=(Name="NoCollision",CollisionEnabled=NoCollision,ObjectTypeName="WorldStatic",CustomResponses=((Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore)),HelpMessage="No collision",bCanModify=False)
@@ -113,5 +114,4 @@ SyncSceneSmoothingFactor=0.000000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
-
 
