--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,2 +1,6 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=93C61C3B496D82F0D96042A5BE010839
+
+[/Script/UnrealEd.ProjectPackagingSettings]
+BuildConfiguration=PPBC_Shipping
+
