--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -3,4 +3,5 @@ ProjectID=93C61C3B496D82F0D96042A5BE010839
 
 [/Script/UnrealEd.ProjectPackagingSettings]
 BuildConfiguration=PPBC_Shipping
+Build=Never
 
