--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -2,7 +2,7 @@
 ProjectID=93C61C3B496D82F0D96042A5BE010839
 
 [/Script/UnrealEd.ProjectPackagingSettings]
-Build=Never
+Build=IfProjectHasCode
 BuildConfiguration=PPBC_Shipping
 StagingDirectory=(Path="C:/Game")
 FullRebuild=False
@@ -79,8 +79,9 @@ bSkipMovies=False
 +EarlyDownloaderPakFileFiles=...\*.upluginmanifest
 +EarlyDownloaderPakFileFiles=...\*.uproject
 +EarlyDownloaderPakFileFiles=...\global_sf*.metalmap
-+MapsToCook=(FilePath="mainmenu")
-+MapsToCook=(FilePath="einar_1")
++MapsToCook=(FilePath="/Game/Maps/mainmenu")
++MapsToCook=(FilePath="/Game/Maps/Einar_1")
 bNativizeBlueprintAssets=False
 bNativizeOnlySelectedBlueprints=False
+
 
